--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="js/libs/matter.js" type="text/javascript"></script>
 <script src="js/libs/phaser.js" type="text/javascript"></script>
 
+<script src="js/object.js" type="text/javascript"></script>
 <script src="js/game.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 
