--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <script src="js/libs/phaser.js" type="text/javascript"></script>
 
 <script src="js/object.js" type="text/javascript"></script>
-<script src="js/game.js" type="text/javascript"></script>
+<script src="js/physics.js" type="text/javascript"></script>
+<script src="js/world.js" type="text/javascript"></script>
+<script src="js/main-game.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 
 </html>
