Moving the rock into it's own class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <script src="js/libs/matter.js" type="text/javascript"></script>
 <script src="js/libs/phaser.js" type="text/javascript"></script>
 
-<script src="js/object.js" type="text/javascript"></script>
+<script src="js/objects/object.js" type="text/javascript"></script>
+<script src="js/objects/rock.js" type="text/javascript"></script>
 <script src="js/physics.js" type="text/javascript"></script>
 <script src="js/world.js" type="text/javascript"></script>
 <script src="js/main-game.js" type="text/javascript"></script>
