--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <script src="js/objects/rock.js" type="text/javascript"></script>
 <script src="js/physics.js" type="text/javascript"></script>
 <script src="js/world.js" type="text/javascript"></script>
+<script src="js/cameras/camera.js" type="text/javascript"></script>
+<script src="js/cameras/free-camera.js" type="text/javascript"></script>
 <script src="js/main-game.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 
