--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="js/world.js" type="text/javascript"></script>
 <script src="js/cameras/camera.js" type="text/javascript"></script>
 <script src="js/cameras/free-camera.js" type="text/javascript"></script>
+<script src="js/cameras/spring-camera.js" type="text/javascript"></script>
 <script src="js/main-game.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 
