--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <script src="js/objects/object.js" type="text/javascript"></script>
 <script src="js/objects/rock.js" type="text/javascript"></script>
 <script src="js/physics.js" type="text/javascript"></script>
+<script src="js/graphics/layer.js" type="text/javascript"></script>
+<script src="js/graphics/particle-field.js" type="text/javascript"></script>
 <script src="js/world.js" type="text/javascript"></script>
 <script src="js/cameras/camera.js" type="text/javascript"></script>
 <script src="js/cameras/free-camera.js" type="text/javascript"></script>
