Adding a simple debug manager

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id='game'></div>
 </body>
 
-<script src="js/libs/decomp.js" type="text/javascript"></script> 
+<script src="js/libs/decomp.js" type="text/javascript"></script>
 <script src="js/libs/matter.js" type="text/javascript"></script>
 <script src="js/libs/phaser.js" type="text/javascript"></script>
 
@@ -24,6 +24,7 @@
 <script src="js/cameras/free-camera.js" type="text/javascript"></script>
 <script src="js/cameras/spring-camera.js" type="text/javascript"></script>
 <script src="js/main-game.js" type="text/javascript"></script>
+<script src="js/debug/debug-manager.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 
 </html>
