--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="/socket.io/socket.io.js"></script>
-    <title>Basic multiplayer online game</title>
+    <title>Rock Around the World!</title>
 </head>
 <body>
     <div id='game'></div>
