Making the game the full size of the browser

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script src="/socket.io/socket.io.js"></script>
     <title>Rock Around the World!</title>
 </head>
-<body>
-    <div id='game'></div>
+<body style='overflow: hidden; padding: 0 0 0 0; margin: 0 0 0 0'>
+    <div id='game' style='overflow: hidden; padding: 0 0 0 0; margin: 0 0 0 0'></div>
 </body>
 
 <script src="js/libs/decomp.js" type="text/javascript"></script>
